@@ -4,25 +4,20 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-public class Exercise1Test extends PetDomainForKata
-{
+public class Exercise1Test extends PetDomainForKata {
     @Test
     @Tag("KATA")
-    public void getFirstNamesOfAllPeople()
-    {
+    public void getFirstNamesOfAllPeople() {
         //TODO
         // Replace empty list firstNames with a stream transformation on people.
         List<String> firstNames = this.people.stream()
                 .map(Person::getFirstName)
-                .collect(Collectors.toList());
-
+                .toList();
 
         var expectedFirstNames = Arrays.asList("Mary", "Bob", "Ted", "Jake", "Barry", "Terry", "Harry", "John");
         Assertions.assertIterableEquals(expectedFirstNames, firstNames);
@@ -30,8 +25,7 @@ public class Exercise1Test extends PetDomainForKata
 
     @Test
     @Tag("KATA")
-    public void getNamesOfMarySmithsPets()
-    {
+    public void getNamesOfMarySmithsPets() {
         Optional<Person> optionalPerson = this.getPersonNamed("Mary Smith");
         List<String> names = new ArrayList<>();
         if (optionalPerson.isPresent()) {
@@ -49,22 +43,19 @@ public class Exercise1Test extends PetDomainForKata
     @Test
     @Tag("KATA")
     @DisplayName("getPeopleWithCats 🐱")
-    public void getPeopleWithCats()
-    {
+    public void getPeopleWithCats() {
         //TODO
         // Replace empty list with a positive filtering stream on people
         List<String> peopleWithCats = this.people.stream().filter(person -> person.hasPet(PetType.CAT)).map(Person::getLastName).toList();
 
         var expectedFirstNames = Arrays.asList("Smith", "Smith");
-
         Assertions.assertEquals(expectedFirstNames, peopleWithCats);
     }
 
     @Test
     @Tag("KATA")
     @DisplayName("getPeopleWithoutCats 🐱")
-    public void getPeopleWithoutCats()
-    {
+    public void getPeopleWithoutCats() {
         //TODO
         // Replace empty list with a negative filtering stream on people
         List<String> peopleWithoutCats = this.people.stream()
